# acyViewer

./: README.md  acyViewer.py
acyViewer-cpp/: CMakeLists.txt  resources.qrc
acyViewer-cpp/src/: imagefetcher.cpp  imagefetcher.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
